Add the needs-you list
